docs: update recommended model links

--- a/docs/customize/model-providers/top-level/deepseek.mdx
+++ b/docs/customize/model-providers/top-level/deepseek.mdx
@@ -41,7 +41,7 @@ We recommend configuring **DeepSeek Chat** as your chat model.
 
 ## How to Set Up DeepSeek Autocomplete Models
 
-We recommend configuring **DeepSeek Coder** as your autocomplete model.
+For recommended autocomplete models, please refer to our [Model Recommendations page](/customization/models).
 
 <Tabs>
    <Tab title="YAML">
