--- a/docs/customize/model-providers/top-level/gemini.mdx
+++ b/docs/customize/model-providers/top-level/gemini.mdx
@@ -48,7 +48,7 @@ Gemini currently does not offer any autocomplete models.
 
 ## How to Configure Gemini Embeddings Models
 
-We recommend configuring **text-embedding-004** as your embeddings model.
+For recommended embeddings models, please refer to our [Model Recommendations page](/customization/models).
 
 <Tabs>
   <Tab title="YAML">
