--- a/docs/customize/model-providers/top-level/ollama.mdx
+++ b/docs/customize/model-providers/top-level/ollama.mdx
@@ -65,7 +65,7 @@ We recommend configuring **Qwen2.5-Coder 1.5B** as your autocomplete model.
 
 ## How to Set Up Ollama Embeddings Models
 
-We recommend configuring **Nomic Embed Text** as your embeddings model.
+For recommended embeddings models, please refer to our [Model Recommendations page](/customization/models).
 
 <Tabs>
     <Tab title="YAML">
