--- a/docs/customize/model-providers/top-level/azure.mdx
+++ b/docs/customize/model-providers/top-level/azure.mdx
@@ -92,7 +92,7 @@ If you use Azure Machine Learning Studio to deploy Codestral:
 
 ## How to Configure Azure AI Foundry Embeddings Models
 
-We recommend configuring **text-embedding-3-large** as your embeddings model.
+For recommended embeddings models, please refer to our [Model Recommendations page](/customization/models).
 
 <Tabs>
     <Tab title="YAML">
