--- a/docs/features/edit/model-setup.mdx
+++ b/docs/features/edit/model-setup.mdx
@@ -16,10 +16,7 @@ The recommended models and how to set them up can be found [here](/features/chat
 
 We also recommend setting up an Apply model for the best Edit experience.
 
-**Recommended Apply models:**
-
-- [Morph v3](https://hub.continue.dev/morphllm/morph-v2)
-- [Relace Instant Apply](https://hub.continue.dev/relace/instant-apply)
+For recommended Apply models, please refer to our [Model Recommendations page](/customization/models).
 
 ## How to Determine Model Compatibility
 
