remove outdated pages and references to them

--- a/docs/hub/blocks/block-types.mdx
+++ b/docs/hub/blocks/block-types.mdx
@@ -12,7 +12,7 @@ Continue supports [many model providers](/customization/models#openai), includin
 
 Context blocks define a context provider which can be referenced in Chat with `@` to pull in data from external sources such as files and folders, a URL, Jira or Confluence, and GitHub issues, among others. [Explore context provider blocks](https://hub.continue.dev/explore/context) on the hub.
 
-Learn more about context providers [here](/reference#context), and check out [this guide](/guides/build-your-own-context-provider) to creating your own custom context provider. The `config.yaml` spec for context can be found [`here`](/reference#context).
+Learn more about context providers [here](/reference#context). The `config.yaml` spec for context can be found [`here`](/reference#context).
 
 ## Docs
 
