--- a/docs/customize/custom-providers.mdx
+++ b/docs/customize/custom-providers.mdx
@@ -155,30 +155,6 @@ config.json
 { "contextProviders": [{ "name": "open", "params": { "onlyPinned": true } }] }
 ```
 
-### `@Web`
-
-Reference relevant pages from across the web, automatically determined from your input.
-
-Optionally, set `n` to limit the number of results returned (default 6).
-
-- YAML
-- JSON
-
-config.yaml
-
-```
-context:
-  - provider: web
-    params:
-      n: 5
-```
-
-config.json
-
-```json
-{ "contextProviders": [{ "name": "web", "params": { "n": 5 } }] }
-```
-
 ### `@Codebase`
 
 Reference the most relevant snippets from your codebase.
@@ -220,49 +196,7 @@ config.json
 { "contextProviders": [{ "name": "folder" }] }
 ```
 
-### `@Search`
 
-Reference the results of codebase search, just like the results you would get from VS Code search.
-
-- YAML
-- JSON
-
-config.yaml
-
-```
-context:
-  - provider: search
-    params:
-      maxResults: 100 # optional, defaults to 200
-```
-
-config.json
-
-```json
-{  "contextProviders": [    {      "name": "search",      "params": {        "maxResults": 100 // optional, defaults to 200      }    }  ]}
-```
-
-This context provider is powered by [ripgrep](https://github.com/BurntSushi/ripgrep).
-
-### `@Url`
-
-Reference the markdown converted contents of a given URL.
-
-- YAML
-- JSON
-
-config.yaml
-
-```
-context:
-  - provider: url
-```
-
-config.json
-
-```json
-{ "contextProviders": [{ "name": "url" }] }
-```
 
 ### `@Clipboard`
 
@@ -437,330 +371,9 @@ config.json
 
 You'll then be able to type "@" and see "MCP" in the context providers dropdown.
 
-### `@Issue`
 
-Reference the conversation in a GitHub issue.
 
-- YAML
-- JSON
 
-config.yaml
-
-```
-context:
-  - provider: issue
-    params:
-      repos:
-        - owner: continuedev
-          repo: continue
-      githubToken: ghp_xxx
-```
-
-config.json
-
-```json
-{
-  "contextProviders": [
-    {
-      "name": "issue",
-      "params": {
-        "repos": [{ "owner": "continuedev", "repo": "continue" }],
-        "githubToken": "ghp_xxx"
-      }
-    }
-  ]
-}
-```
-
-Make sure to include your own [GitHub personal access token](https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/managing-your-personal-access-tokens#creating-a-fine-grained-personal-access-token) to avoid being rate-limited.
-
-### `@Database`
-
-Reference table schemas from Sqlite, Postgres, MSSQL, and MySQL databases.
-
-- YAML
-- JSON
-
-config.yaml
-
-```
-context:
-  - provider: database
-    params:
-      connections:
-        - name: examplePostgres
-          connection_type: postgres
-          connection:
-            user: username
-            host: localhost
-            database: exampleDB
-            password: yourPassword
-            port: 5432
-        - name: exampleMssql
-          connection_type: mssql
-          connection:
-            user: username
-            server: localhost
-            database: exampleDB
-            password: yourPassword
-        - name: exampleSqlite
-          connection_type: sqlite
-          connection:
-            filename: /path/to/your/sqlite/database.db
-```
-
-config.json
-
-```json
-{
-  "contextProviders": [
-    {
-      "name": "database",
-      "params": {
-        "connections": [
-          {
-            "name": "examplePostgres",
-            "connection_type": "postgres",
-            "connection": {
-              "user": "username",
-              "host": "localhost",
-              "database": "exampleDB",
-              "password": "yourPassword",
-              "port": 5432
-            }
-          },
-          {
-            "name": "exampleMssql",
-            "connection_type": "mssql",
-            "connection": {
-              "user": "username",
-              "server": "localhost",
-              "database": "exampleDB",
-              "password": "yourPassword"
-            }
-          },
-          {
-            "name": "exampleSqlite",
-            "connection_type": "sqlite",
-            "connection": { "filename": "/path/to/your/sqlite/database.db" }
-          }
-        ]
-      }
-    }
-  ]
-}
-```
-
-Each connection should include a unique name, the `connection_type`, and the necessary connection parameters specific to each database type.
-
-Available connection types:
-
-- `postgres`
-- `mysql`
-- `sqlite`
-
-### `@Google`
-
-Reference the results of a Google search.
-
-- YAML
-- JSON
-
-config.yaml
-
-```
-context:
-  - provider: google
-    params:
-      serperApiKey: <YOUR_SERPER.DEV_API_KEY>
-```
-
-config.json
-
-```json
-{
-  "contextProviders": [
-    {
-      "name": "google",
-      "params": { "serperApiKey": "<YOUR_SERPER.DEV_API_KEY>" }
-    }
-  ]
-}
-```
-
-For example, type "@Google python tutorial" if you want to search and discuss ways of learning Python.
-
-Note: You can get an API key for free at [serper.dev](https://serper.dev).
-
-### `@Gitlab Merge Request`
-
-Reference an open MR for this branch on GitLab.
-
-- YAML
-- JSON
-
-config.yaml
-
-```
-context:
-  - provider: gitlab-mr
-    params:
-      token: "..."
-```
-
-config.json
-
-```json
-{ "contextProviders": [{ "name": "gitlab-mr", "params": { "token": "..." } }] }
-```
-
-You will need to create a [personal access token](https://docs.gitlab.com/ee/user/profile/personal_access_tokens.html) with the `read_api` scope.
-
-#### Using Self-Hosted GitLab
-
-You can specify the domain to communicate with by setting the `domain` parameter in your configurtion. By default this is set to `gitlab.com`.
-
-- YAML
-- JSON
-
-config.yaml
-
-```
-context:
-  - provider: gitlab-mr
-    params:
-      token: "..."
-      domain: "gitlab.example.com"
-```
-
-config.json
-
-```json
-{
-  "contextProviders": [
-    {
-      "name": "gitlab-mr",
-      "params": { "token": "...", "domain": "gitlab.example.com" }
-    }
-  ]
-}
-```
-
-#### Filtering Comments
-
-If you select some code to be edited, you can have the context provider filter out comments for other files. To enable this feature, set `filterComments` to `true`.
-
-### `@Jira`
-
-Reference the conversation in a Jira issue.
-
-- YAML
-- JSON
-
-config.yaml
-
-```
-context:
-  - provider: jira
-    params:
-      domain: company.atlassian.net
-      token: ATATT...
-```
-
-config.json
-
-```json
-{
-  "contextProviders": [
-    {
-      "name": "jira",
-      "params": { "domain": "company.atlassian.net", "token": "ATATT..." }
-    }
-  ]
-}
-```
-
-Make sure to include your own [Atlassian API Token](https://id.atlassian.com/manage-profile/security/api-tokens), or use your `email` and `token`, with token set to your password for basic authentication. If you use your own Atlassian API Token, don't configure your email.
-
-#### Jira Datacenter Support
-
-This context provider supports both Jira API version 2 and 3. It will use version 3 by default since that's what the cloud version uses, but if you have the datacenter version of Jira, you'll need to set the API Version to 2 using the `apiVersion` property.
-
-- YAML
-- JSON
-
-config.yaml
-
-```
-context:
-  - provider: jira
-    params:
-      apiVersion: "2"
-```
-
-config.json
-
-```json
-{ "contextProviders": [{ "name": "jira", "params": { "apiVersion": "2" } }] }
-```
-
-#### Issue Query
-
-By default, the following query will be used to find issues:
-
-```
-assignee = currentUser() AND resolution = Unresolved order by updated DESC
-```
-
-You can override this query by setting the `issueQuery` parameter.
-
-#### Max results
-
-You can set the `maxResults` parameter to limit the number of results returned. The default is `50`.
-
-### `@Discord`
-
-Reference the messages in a Discord channel.
-
-- YAML
-- JSON
-
-config.yaml
-
-```
-context:
-  - provider: discord
-    params:
-      discordKey: "bot token"
-      guildId: "1234567890"
-      channels:
-        - id: "123456"
-          name: "example-channel"
-        - id: "678901"
-          name: "example-channel-2"
-```
-
-config.json
-
-```json
-{
-  "contextProviders": [
-    {
-      "name": "discord",
-      "params": {
-        "discordKey": "bot token",
-        "guildId": "1234567890",
-        "channels": [
-          { "id": "123456", "name": "example-channel" },
-          { "id": "678901", "name": "example-channel-2" }
-        ]
-      }
-    }
-  ]
-}
-```
-
-Make sure to include your own [Bot Token](https://discord.com/developers/applications), and join it to your related server . If you want more granular control over which channels are searched, you can specify a list of channel IDs to search in. If you don't want to specify any channels, just include the guild id(Server ID) and all channels will be included. The provider only reads text channels.
 
 ### `@HTTP`
 
@@ -804,65 +417,20 @@ Response
 [  {    "name": "",    "description": "",    "content": ""  }]// OR{  "name": "",  "description": "",  "content": ""}
 ```
 
-### `@Commits`
 
-Reference specific git commit metadata and diff or all of the recent commits.
 
-- YAML
-- JSON
+## Deprecated Context Providers
 
-config.yaml
+Some context providers have been deprecated and moved to a separate reference page. If you're using any of these providers, they will continue to work but are no longer actively maintained. View the [deprecated context providers](/reference/deprecated-context-providers) for documentation on:
 
-```
-context:
-  - provider: commit
-    params:
-      Depth: 50
-      LastXCommitsDepth: 10
-```
-
-config.json
-
-```json
-{
-  "contextProviders": [
-    { "name": "commit", "params": { "Depth": 50, "LastXCommitsDepth": 10 } }
-  ]
-}
-```
-
-The depth is how many commits will be loaded into the submenu, defaults to 50. The LastXCommitsDepth is how many recent commits will be included, defaults to 10.
-
-### `@Greptile`
-
-Query a [Greptile](https://www.greptile.com/) index of the current repo/branch.
-
-- YAML
-- JSON
-
-config.yaml
-
-```
-context:
-  - provider: greptile
-    params:
-      greptileToken: "..."
-      githubToken: "..."
-```
-
-config.json
-
-```json
-{
-  "contextProviders": [
-    {
-      "name": "greptile",
-      "params": { "GreptileToken": "...", "GithubToken": "..." }
-    }
-  ]
-}
-```
-
-### Requesting Context Providers
-
-Not seeing what you want? Create an issue [here](https://github.com/continuedev/continue/issues/new?assignees=TyDunn&labels=enhancement&projects=&template=feature-request-%F0%9F%92%AA.md&title=) to request a new Context Provider.
+- `@Greptile` - Query Greptile index
+- `@Commits` - Reference git commits
+- `@Discord` - Reference Discord messages
+- `@Jira` - Reference Jira issues
+- `@Gitlab Merge Request` - Reference GitLab MRs
+- `@Google` - Google search results
+- `@Database` - Database schemas
+- `@Issue` - GitHub issues
+- `@Url` - URL content
+- `@Search` - Codebase search
+- `@Web` - Web search results
