replace context provider with MCP in custom code RAG

--- a/docs/features/chat/how-to-customize.mdx
+++ b/docs/features/chat/how-to-customize.mdx
@@ -3,4 +3,5 @@ There are a number of different ways to customize Chat:
 - Add a `rules` block to give the model persistent instructions through the system prompt
 - Configure `@Codebase`
 - Configure `@Docs`
-- [Create a custom code RAG](/guides/custom-code-rag)
+- [Make your agent aware of codebases and documentation](/guides/codebase-documentation-awareness)
+- [Create a custom code RAG](/guides/custom-code-rag) (for advanced users with large codebases)
