--- a/docs/guides/codebase-documentation-awareness.mdx
+++ b/docs/guides/codebase-documentation-awareness.mdx
@@ -100,9 +100,7 @@ Create an MCP server that has access to your internal repositories.
 
 #### Custom code RAG
 
-For potentially better performance and cost efficiency with large internal codebases, implement [custom code RAG](/guides/customize-chat#codebase-retrieval).
-
-```
+For faster retrieval and lower costs with very large internal codebases, consider implementing a [custom code RAG](/guides/custom-code-rag) system. This is an advanced approach that requires more setup but can provide performance benefits at scale.
 
 ## Make your agent aware of relevant documentation
 
