--- a/docs/guides/overview.mdx
+++ b/docs/guides/overview.mdx
@@ -10,7 +10,8 @@ title: "Overview"
 
 ## Advanced Tutorials
 
-- [Custom Code RAG](/guides/custom-code-rag) - Implement custom retrieval-augmented generation
+- [Codebase and Documentation Awareness](/guides/codebase-documentation-awareness) - Make your agent aware of codebases and documentation
+- [Custom Code RAG](/guides/custom-code-rag) - Advanced: Build custom retrieval-augmented generation for large codebases
 
 ## Contributing
 
