deprecate @docs and @codebase

--- a/docs/customize/overview.mdx
+++ b/docs/customize/overview.mdx
@@ -11,9 +11,9 @@ Master how Continue understands your codebase with powerful context providers fo
 
 ## Context Integration
 
-Specialized context features for codebase understanding and documentation integration.
+Learn how to make your AI agent aware of your codebase and documentation for more intelligent assistance.
 
-[Browse Context Features →](/customization/overview#codebase-context)
+[Learn Context Integration →](/guides/codebase-documentation-awareness)
 
 ## Deep Dives
 
