--- a/docs/features/chat/context-selection.mdx
+++ b/docs/features/chat/context-selection.mdx
@@ -14,17 +14,13 @@ You can include the currently open file as context by pressing opt/alt + enter w
 
 You can include a specific file in your current workspace by typing '@Files' and selecting the file.
 
-## Specific Folder
-
-You can include a folder in your current workspace by typing '@Folder' and selecting the directory.
-
 ## Codebase Search
 
-You can automatically include relevant files from your codebase by typing '@Codebase'.
+For better codebase awareness, see our [guide on making agents aware of codebases and documentation](/guides/codebase-documentation-awareness).
 
 ## Documentation Site
 
-You can include a documentation site as context by typing '@Docs' and selecting the site.
+For better documentation awareness, see our [guide on making agents aware of codebases and documentation](/guides/codebase-documentation-awareness).
 
 ## Terminal Contents
 
