--- a/docs/customize/custom-providers.mdx
+++ b/docs/customize/custom-providers.mdx
@@ -110,28 +110,7 @@ config.json
 { "contextProviders": [{ "name": "terminal" }] }
 ```
 
-### `@Docs`
 
-Reference the contents from any documentation site.
-
-- YAML
-- JSON
-
-config.yaml
-
-```
-context:  - provider: docs
-```
-
-config.json
-
-```json
-{ "contextProviders": [{ "name": "docs" }] }
-```
-
-Note that this will only enable the `@Docs` context provider.
-
-To use it, you need to add a documentation site to your config file. See the [docs](/customization/overview#documentation-context) page for more information.
 
 ### `@Open`
 
@@ -154,48 +133,6 @@ config.json
 ```json
 { "contextProviders": [{ "name": "open", "params": { "onlyPinned": true } }] }
 ```
-
-### `@Codebase`
-
-Reference the most relevant snippets from your codebase.
-
-- YAML
-- JSON
-
-config.yaml
-
-```
-context:
-  - provider: codebase
-```
-
-config.json
-
-```json
-{ "contextProviders": [{ "name": "codebase" }] }
-```
-
-Read more about indexing and retrieval [here](/customization/overview#codebase-context).
-
-### `@Folder`
-
-Uses the same retrieval mechanism as `@Codebase`, but only on a single folder.
-
-- YAML
-- JSON
-
-config.yaml
-
-```
-context:  - provider: folder
-```
-
-config.json
-
-```json
-{ "contextProviders": [{ "name": "folder" }] }
-```
-
 
 
 ### `@Clipboard`
@@ -421,8 +358,11 @@ Response
 
 ## Deprecated Context Providers
 
-Some context providers have been deprecated and moved to a separate reference page. If you're using any of these providers, they will continue to work but are no longer actively maintained. View the [deprecated context providers](/reference/deprecated-context-providers) for documentation on:
+View the [deprecated context providers](/reference/deprecated-context-providers) for documentation on:
 
+- [`@Codebase`](/reference/deprecated-codebase) - Use the [codebase awareness guide](/guides/codebase-documentation-awareness) instead
+- [`@Folder`](/reference/deprecated-codebase) - Use the [codebase awareness guide](/guides/codebase-documentation-awareness) instead
+- [`@Docs`](/reference/deprecated-docs) - Use the [documentation awareness guide](/guides/codebase-documentation-awareness) instead
 - `@Greptile` - Query Greptile index
 - `@Commits` - Reference git commits
 - `@Discord` - Reference Discord messages
