--- a/docs/reference/deprecated-codebase.mdx
+++ b/docs/reference/deprecated-codebase.mdx
@@ -1,15 +1,32 @@
 ---
-title: "@Codebase"
-description: Talk to your codebase
-keywords: [talk, embeddings, reranker, codebase, experimental]
+title: "@Codebase (Deprecated)"
+description: Deprecated codebase context provider - use the new codebase awareness approach instead
+keywords: [deprecated, codebase, embeddings, context, legacy]
+noindex: true
 ---
+
+<Warning>
+  **This feature is deprecated.** The `@Codebase` context provider has been deprecated in favor of a more integrated approach to codebase awareness. Please refer to our [Guide on Making Agents Aware of Codebases and Documentation](/guides/codebase-documentation-awareness) for the recommended approach.
+</Warning>
+
+## Migration Guide
+
+If you're currently using `@Codebase` or `@Folder` context providers, please migrate to the new approach outlined in our [codebase and documentation awareness guide](/guides/codebase-documentation-awareness). The new approach provides:
+
+- Better integration with Continue's Agent features
+- More intelligent context selection
+- Improved performance and accuracy
+
+## Legacy Documentation
+
+*Below is the original documentation for the `@Codebase` context provider, preserved for reference*
 
 Continue indexes your codebase so that it can later automatically pull in the most relevant context from throughout your workspace. This is done via a combination of embeddings-based retrieval and keyword search. By default, all embeddings are calculated locally using `transformers.js` and stored locally in `~/.continue/index`.
 
 <Info>
   **Note:** `transformers.js` cannot be used in JetBrains IDEs. However, you can
   select a different embeddings model from [the list
-  here](../model-roles/embeddings.mdx).
+  here](../customize/model-roles/embeddings.mdx).
 </Info>
 
 Currently, the codebase retrieval feature is available as the "codebase" and "folder" context providers. You can use them by typing `@Codebase` or `@Folder` in the input box, and then asking a question. The contents of the input box will be compared with the embeddings from the rest of the codebase (or folder) to determine relevant files.
@@ -94,4 +111,4 @@ If you need to force a refresh of the index, reload the VS Code window with <kbd
 
 ## Repository map
 
-Models in the Claude 3, Llama 3.1/3.2, Gemini 1.5, and GPT-4o families will automatically use a [repository map](../custom-providers#repository-map) during codebase retrieval, which allows the model to understand the structure of your codebase and use it to answer questions. Currently, the repository map only contains the filepaths in the codebase.
+Models in the Claude 3, Llama 3.1/3.2, Gemini 1.5, and GPT-4o families will automatically use a [repository map](../customize/custom-providers#repository-map) during codebase retrieval, which allows the model to understand the structure of your codebase and use it to answer questions. Currently, the repository map only contains the filepaths in the codebase.
