remove context, docs, data blocks

--- a/docs/features/chat/how-it-works.mdx
+++ b/docs/features/chat/how-it-works.mdx
@@ -22,10 +22,7 @@ When you start a chat conversation, Continue:
 
 ### Manual Context
 
-- `@Codebase` - Search and include relevant code from your project
-- `@Docs` - Include documentation context
 - `@Files` - Reference specific files
-- Custom context providers
 
 ## Response Handling
 
@@ -52,7 +49,7 @@ View the exact prompt sent to the AI model in the [prompt logs](/troubleshooting
 Learn more about how context providers work:
 
 - [Codebase Context](/customize/context/codebase)
-- [Documentation Context](/customize/context/documentation)
+- [Documentation Awareness](/guides/codebase-documentation-awareness)
 
 ---
 
