--- a/docs/hub/introduction.mdx
+++ b/docs/hub/introduction.mdx
@@ -6,8 +6,8 @@ title: "Introduction"
 
 Continue Hub provides a centralized platform for managing the essential building blocks of your AI coding workflow:
 
-- **[Models](/hub/blocks/block-types#models)**: Discover and configure modelss from various providers
-- **[MCP Tools](/hub/blocks/block-types#mcp-servers)**: Access and integrate Model Context Protocol tools to retireve real-time data and take action
+- **[Models](/hub/blocks/block-types#models)**: Discover and configure models from various providers
+- **[MCP Tools](/hub/blocks/block-types#mcp-servers)**: Access and integrate Model Context Protocol tools to retrieve real-time data and take action
 - **[Rules](/hub/blocks/block-types#rules)**: Define custom guidelines for your custom AI coding agent to follow
 - **[Prompts](/hub/blocks/block-types#prompts)**: Create and share reusable prompts that kickoff your custom AI coding agent
 
