--- a/docs/reference/deprecated-docs.mdx
+++ b/docs/reference/deprecated-docs.mdx
@@ -58,9 +58,7 @@ The `@Docs` context provider works by
 
 ## Indexing Your Own Documentation
 
-### Hub `docs` Blocks
-
-@Docs uses [`docs` blocks](../../hub/blocks/block-types#docs) in Assistants from the hub. Visit the hub to [explore `docs` blocks](https://hub.continue.dev/explore/docs) or [create your own](https://hub.continue.dev/new?type=block&blockType=docs).
+**Note:** Documentation configuration should now be done directly in your `config.yaml` file. The previous `docs` blocks functionality has been deprecated.
 
 ### Through the `@Docs` Context Provider
 
