--- a/docs/customization/mcp-tools.mdx
+++ b/docs/customization/mcp-tools.mdx
@@ -1,5 +1,5 @@
 ---
-title: "MCP Blocks"
+title: "MCP servers"
 description: "Model Context Protocol servers provide specialized functionality:"
 ---
 
