--- a/docs/customization/models.mdx
+++ b/docs/customization/models.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Model Blocks"
-description: "These blocks form the foundation of the entire assistant experience, offering different specialized capabilities:"
+title: "Models"
+description: "Models form the foundation of the entire assistant experience, offering different specialized capabilities:"
 ---
 
 - **[Chat](/customize/model-roles/chat)**: Power conversational interactions about code and provide detailed guidance
@@ -10,10 +10,10 @@ description: "These blocks form the foundation of the entire assistant experienc
 - **[Embedding](/customize/model-roles/embeddings)**: Transform code into vector representations for semantic search
 - **[Reranker](/customize/model-roles/reranking)**: Improve search relevance by ordering results based on semantic meaning
 
-![Model Blocks Overview](/images/customization/images/model-blocks-overview-36c30e7e01928d7a9b5b26ff1639c34b.png)
+![Models Overview](/images/customization/images/model-blocks-overview-36c30e7e01928d7a9b5b26ff1639c34b.png)
 
 ## Learn More
 
 Continue supports [many model providers](/customization/models#openai), including Anthropic, OpenAI, Gemini, Ollama, Amazon Bedrock, Azure, xAI, DeepSeek, and more. Models can have various roles like `chat`, `edit`, `apply`, `autocomplete`, `embed`, and `rerank`.
 
-Read more about roles [here](/customize/model-roles) and view [`models`](/reference#models) in the YAML Reference.
+Read more about [model roles](/customize/model-roles), [model capabilities](/customize/deep-dives/model-capabilities) and view [`models`](/reference#models) in the YAML Reference.
