--- a/docs/customization/rules.mdx
+++ b/docs/customization/rules.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Rules Blocks"
+title: "Rules"
 description: "Rules allow you to provide specific instructions that guide how the AI assistant behaves when working with your code. Instead of the AI making assumptions about your coding standards, architecture patterns, or project-specific requirements, you can explicitly define guidelines that ensure consistent, contextually appropriate responses."
 ---
 
@@ -13,6 +13,6 @@ By implementing rules, you transform the AI from a generic coding assistant into
 
 ### How Rules Work
 
-Your assistant detects rule blocks and applies the specified rules while in [Agent](/features/agent/quick-start), [Chat](/features/chat/quick-start), and [Edit](/features/edit/quick-start) modes.
+Your assistant detects rules and applies the specified rules while in [Agent](/features/agent/quick-start), [Chat](/features/chat/quick-start), and [Edit](/features/edit/quick-start) modes.
 
 Learn more in the [rules deep dive](/customize/deep-dives/rules), and view [`rules`](/reference#rules) in the YAML Reference for more details.
