--- a/docs/customization/models.mdx
+++ b/docs/customization/models.mdx
@@ -16,15 +16,15 @@ description: "These blocks form the foundation of the entire assistant experienc
 
 ### Best Models by Role
 
-| Model role   | Best open models                                                                                                                                   | Best closed models                                                                                                                                                                                                                                             | Notes                                                                        |
-| :----------- | :------------------------------------------------------------------------------------------------------------------------------------------------- | :------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | :--------------------------------------------------------------------------- |
-| Agent / Plan | Qwen 3 Coder (480B), Qwen 3 Coder (30B), Devstral (27B), Devstral, GLM 4.5 (355B), GLM 4.5 Air (106B), Kimi K2 (1T), gpt-oss (120B), gpt-oss (20B) | [Claude Opus 4.1](https://hub.continue.dev/anthropic/claude-4-1-opus), [Claude Sonnet 4](https://hub.continue.dev/anthropic/claude-4-sonnet), [GPT-5](https://hub.continue.dev/openai/gpt-5), [Gemini 2.5 Pro](https://hub.continue.dev/google/gemini-2.5-pro) | Closed models are slightly better than open models                           |
-| Chat / Edit  | Qwen 3 Coder (480B), Qwen 3 Coder (30B), gpt-oss (120B), gpt-oss (20B)                                                                             | [Claude Opus 4.1](https://hub.continue.dev/anthropic/claude-4-1-opus), [Claude Sonnet 4](https://hub.continue.dev/anthropic/claude-4-sonnet), [GPT-5](https://hub.continue.dev/openai/gpt-5), [Gemini 2.5 Pro](https://hub.continue.dev/google/gemini-2.5-pro) | Closed and open models have pretty similar performance                       |
-| Autocomplete | [QwenCoder2.5 (1.5B)](https://hub.continue.dev/ollama/qwen2.5-coder-1.5b), QwenCoder2.5 (7B)                                                       | [Codestral](https://hub.continue.dev/mistral/codestral), Mercury Coder                                                                                                                                                                                         | Closed models are slightly better than open models                           |
-| Apply        | N/A                                                                                                                                                | [Relace Instant Apply](https://hub.continue.dev/relace/instant-apply), [Morph Fast Apply](https://hub.continue.dev/morphllm/morph-v2)                                                                                                                          | Open models are basically non-existent / not good enough for this model role |
-| Embed        | Nomic Embed Text                                                                                                                                   | [Voyage Code 3](https://hub.continue.dev/voyageai/voyage-code-3), [Morph Embeddings](https://hub.continue.dev/morphllm/morph-embedding-v2), Codestral Embed,                                                                                                   | Open embeddings models are emerging but closed models still perform better   |
-| Rerank       | zerank-1, zerank-1-small                                                                                                                           | rerank-2.5, Relace Code Rerank, [Morph Rerank](https://hub.continue.dev/morphllm/morph-rerank-v2)                                                                                                                                                              | Open models are beginning to emerge for this model role                      |
-| Next Edit    | Zeta                                                                                                                                               | Mercury Coder                                                                                                                                                                                                                                                  | Closed models are significantly better than open models                      |
+| Model role   | Best open models                                                                                                                                 | Best closed models                                                                                                                                                                                                                                             | Notes                                                                        |
+| :----------- | :----------------------------------------------------------------------------------------------------------------------------------------------- | :------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | :--------------------------------------------------------------------------- |
+| Agent / Plan | Qwen3 Coder (480B), Qwen3 Coder (30B), Devstral (27B), Devstral, GLM 4.5 (355B), GLM 4.5 Air (106B), Kimi K2 (1T), gpt-oss (120B), gpt-oss (20B) | [Claude Opus 4.1](https://hub.continue.dev/anthropic/claude-4-1-opus), [Claude Sonnet 4](https://hub.continue.dev/anthropic/claude-4-sonnet), [GPT-5](https://hub.continue.dev/openai/gpt-5), [Gemini 2.5 Pro](https://hub.continue.dev/google/gemini-2.5-pro) | Closed models are slightly better than open models                           |
+| Chat / Edit  | Qwen3 Coder (480B), Qwen3 Coder (30B), gpt-oss (120B), gpt-oss (20B)                                                                             | [Claude Opus 4.1](https://hub.continue.dev/anthropic/claude-4-1-opus), [Claude Sonnet 4](https://hub.continue.dev/anthropic/claude-4-sonnet), [GPT-5](https://hub.continue.dev/openai/gpt-5), [Gemini 2.5 Pro](https://hub.continue.dev/google/gemini-2.5-pro) | Closed and open models have pretty similar performance                       |
+| Autocomplete | [QwenCoder2.5 (1.5B)](https://hub.continue.dev/ollama/qwen2.5-coder-1.5b), QwenCoder2.5 (7B)                                                     | [Codestral](https://hub.continue.dev/mistral/codestral), Mercury Coder                                                                                                                                                                                         | Closed models are slightly better than open models                           |
+| Apply        | N/A                                                                                                                                              | [Relace Instant Apply](https://hub.continue.dev/relace/instant-apply), [Morph Fast Apply](https://hub.continue.dev/morphllm/morph-v2)                                                                                                                          | Open models are basically non-existent / not good enough for this model role |
+| Embed        | [Nomic Embed Text](https://hub.continue.dev/ollama/nomic-embed-text-latest), Qwen3 Embedding                                                     | [Voyage Code 3](https://hub.continue.dev/voyageai/voyage-code-3), [Morph Embeddings](https://hub.continue.dev/morphllm/morph-embedding-v2), Codestral Embed                                                                                                    | Closed models are slightly better than open models                           |
+| Rerank       | zerank-1, zerank-1-small, Qwen3 Reranker                                                                                                         | [Voyage Rerank 2.5](https://hub.continue.dev/voyageai/rerank-2-5), Relace Code Rerank, [Morph Rerank](https://hub.continue.dev/morphllm/morph-rerank-v2)                                                                                                       | Open models are beginning to emerge for this model role                      |
+| Next Edit    | Zeta                                                                                                                                             | Mercury Coder                                                                                                                                                                                                                                                  | Closed models are significantly better than open models                      |
 
 ## Learn More About Model Blocks
 
