feat: centralize model recommendations with React component
- Add ModelRecommendations.jsx component for dynamic table rendering
- Replace static markdown table in models.mdx with reusable component
- Update model recommendations with latest 2025 models
- Add support for role-based filtering and markdown link parsing
- Remove unused YAML data files to reduce duplication
- Implement centralized model management per Mintlify best practices

--- a/docs/guides/ollama-guide.mdx
+++ b/docs/guides/ollama-guide.mdx
@@ -100,10 +100,13 @@ models:
   **Important**: Hub blocks only provide configuration - you still need to pull
   the model locally. The hub block `ollama/deepseek-r1-32b` configures Continue
   to use `model: deepseek-r1:32b`, but the actual model must be installed:
-  ```bash # Check what the hub block expects (view on hub.continue.dev) # Then
-  pull that exact model tag locally ollama pull deepseek-r1:32b # Required for
-  ollama/deepseek-r1-32b hub block ``` If the model isn't installed, Ollama will
+  ```bash 
+  # Check what the hub block expects (view on hub.continue.dev) 
+  # Then pull that exact model tag locally ollama pull deepseek-r1:32b # Required for ollama/deepseek-r1-32b hub block 
+  ``` 
+  If the model isn't installed, Ollama will
   return: `404 model "deepseek-r1:32b" not found, try pulling it first`
+
 </Warning>
 
 ### Method 2: Using Autodetect
