--- a/docs/features/chat/how-to-customize.mdx
+++ b/docs/features/chat/how-to-customize.mdx
@@ -1,3 +1,4 @@
 There are a number of different ways to customize Chat:
 
-- Add a `rules` block to give the model persistent instructions through the system prompt
+- Add [rules](/customization/rules) to give the model persistent instructions through the system prompt
+- Create [prompts](/customization/prompts) to kickoff workflows with instructions you repeat often
