--- a/docs/features/chat/how-it-works.mdx
+++ b/docs/features/chat/how-it-works.mdx
@@ -44,12 +44,13 @@ Each code section in the AI response includes action buttons:
 
 View the exact prompt sent to the AI model in the [prompt logs](/troubleshooting) for debugging and optimization.
 
-### Context Providers
+### Context
 
-Learn more about how context providers work:
+Learn more about how you can bring in context:
 
 - [Codebase Context](/customize/context/codebase)
-- [Documentation Awareness](/guides/codebase-documentation-awareness)
+- [Documentation Context](/guides/codebase-documentation-awareness)
+- [Built-in Context Providers](/customize/deep-dives/custom-providers)
 
 ---
 
