updating more providers

--- a/docs/customize/model-providers/top-level/inception.mdx
+++ b/docs/customize/model-providers/top-level/inception.mdx
@@ -11,7 +11,7 @@ slug: ../inception
   Get an API key from [Inception Platform](https://platform.inceptionlabs.ai/dashboard/api-keys)
 </Info>
 
-## Confiugration
+## Configuration
 
 <Tabs>
   <Tab title="YAML">
