--- a/docs/customize/model-providers/top-level/lmstudio.mdx
+++ b/docs/customize/model-providers/top-level/lmstudio.mdx
@@ -10,7 +10,7 @@ title: "LM Studio"
   Get started with [LM Studio](https://lmstudio.ai/download)
 </Info>
 
-## Configure
+## Configuration
 
 <Tabs>
   <Tab title="YAML">
