--- a/docs/customize/model-providers/more/mistral.mdx
+++ b/docs/customize/model-providers/more/mistral.mdx
@@ -3,39 +3,34 @@ title: Mistral
 slug: ../mistral
 ---
 
+<Tip>
+  **Discover Mistral models [here](https://hub.continue.dev/mistral)**
+</Tip>
+
 <Info>
-  You can get an API key from the [Mistral
-  Dashboard](https://console.mistral.ai). Note that the API key for Codestral
-  (codestral.mistral.ai) is different from for all other models
-  (api.mistral.ai). If you are using a Codestral API key, you should set the
-  `apiBase` to `https://codestral.mistral.ai/v1`. Otherwise, we will default to
-  using `https://api.mistral.ai/v1`.
+  Get an API key from the [Mistral Dashboard](https://console.mistral.ai)
 </Info>
 
-## Chat model
-
-We recommend configuring **Mistral Large** as your chat model.
+## Configuration
 
 <Tabs>
   <Tab title="YAML">
   ```yaml title="config.yaml"
   models:
-    - name: Mistral Large
+    - name: <MODEL_NAME>
       provider: mistral
-      model: mistral-large-latest 
+      model: <MODEL_ID>
       apiKey: <YOUR_MISTRAL_API_KEY>
-      roles:
-        - chat
   ```
   </Tab>
-  <Tab title="JSON">
+  <Tab title="JSON (Deprecated)">
   ```json title="config.json"
   {
     "models": [
       {
-        "title": "Mistral Large", 
+        "title": "<MODEL_NAME>",
         "provider": "mistral",
-        "model": "mistral-large-latest",
+        "model": "<MODEL_ID>",
         "apiKey": "<YOUR_MISTRAL_API_KEY>"
       }
     ]
@@ -44,69 +39,12 @@ We recommend configuring **Mistral Large** as your chat model.
   </Tab>
 </Tabs>
 
-## Autocomplete model
+<Info>
+  **Check out a more advanced configuration [here](https://hub.continue.dev/mistral/codestral?view=config)**
+</Info>
 
-We recommend configuring **Codestral** as your autocomplete model.
-
-<Tabs>
-  <Tab title="YAML">
-  ```yaml title="config.yaml"
-  models:
-    - name: Codestral
-      provider: mistral
-      model: codestral-latest
-      # apiBase: https://codestral.mistral.ai/v1  # Do this if you are using a Codestral API key
-      roles:
-        - autocomplete
-  ```
-  </Tab>
-  <Tab title="JSON">
-  ```json title="config.json"
-  {
-    "tabAutocompleteModel": {
-      "title": "Codestral",
-      "provider": "mistral",
-      "model": "codestral-latest"
-      // "apiBase": "https://codestral.mistral.ai/v1"  // Do this if you are using a Codestral API key
-    }
-  }
-  ```
-  </Tab>
-</Tabs>
-
-## Embeddings model
-
-We recommend configuring **Mistral Embed** as your embeddings model.
-
-<Tabs>
-  <Tab title="YAML">
-  ```yaml title="config.yaml"
-  models:
-    - name: Mistral Embed
-      provider: mistral
-      model: mistral-embed
-      apiKey: <YOUR_MISTRAL_API_KEY> 
-      apiBase: https://api.mistral.ai/v1
-      roles:
-        - embed
-  ```
-  </Tab>
-  <Tab title="JSON">
-  ```json title="config.json"
-  {
-    "embeddingsProvider": {
-      "provider": "mistral",
-      "model": "mistral-embed", 
-      "apiKey": "<YOUR_MISTRAL_API_KEY>",
-      "apiBase": "https://api.mistral.ai/v1"
-    }
-  }
-  ```
-  </Tab>
-</Tabs>
-
-## Reranking model
-
-Mistral currently does not offer any reranking models.
-
-[Click here](../../model-roles/reranking.mdx) to see a list of reranking model providers.
+<Note>
+  The API key for `codestral.mistral.ai` is different from `api.mistral.ai`. 
+  If you are using a Codestral API key, you should set the `apiBase` to `https://codestral.mistral.ai/v1`.
+  Otherwise, we will default to using `https://api.mistral.ai/v1`.
+</Note>
