--- a/docs/customize/model-providers/more/xAI.mdx
+++ b/docs/customize/model-providers/more/xAI.mdx
@@ -3,35 +3,34 @@ title: xAI
 slug: ../xai
 ---
 
+<Tip>
+  **Discover xAI models [here](https://hub.continue.dev/xai)**
+</Tip>
+
 <Info>
-  You can get an API key from the [xAI console](https://console.x.ai/)
+  Get an API key from the [xAI Console](https://console.x.ai/)
 </Info>
 
-## Chat model
-
-We recommend configuring **grok-4** as your chat model. For information on other available models, visit [xAI Documentation](https://docs.x.ai/docs/models).
+## Configuration
 
 <Tabs>
-	<Tab title="Config">
-  Add the [xAI Grok 4 model block](https://hub.continue.dev/xai/grok-4) on the hub.
-  </Tab>
-	<Tab title="YAML">
+  <Tab title="YAML">
   ```yaml title="config.yaml"
   models:
-    - name: Grok 4
-      provider: xAI
-      model: grok-4
+    - name: <MODEL_NAME>
+      provider: xai
+      model: <MODEL_ID>
       apiKey: <YOUR_XAI_API_KEY>
   ```
   </Tab>
-	<Tab title="JSON">
+  <Tab title="JSON (Deprecated)">
   ```json title="config.json"
   {
     "models": [
       {
-        "title": "Grok 4",
-        "provider": "xAI",
-        "model": "grok-4",
+        "title": "<MODEL_NAME>",
+        "provider": "anthropic",
+        "model": "<MODEL_ID>",
         "apiKey": "<YOUR_XAI_API_KEY>"
       }
     ]
@@ -40,20 +39,6 @@ We recommend configuring **grok-4** as your chat model. For information on other
   </Tab>
 </Tabs>
 
-## Autocomplete model
-
-xAI currently does not offer any autocomplete models.
-
-[Click here](../../model-roles/autocomplete.md) to see a list of autocomplete model providers.
-
-## Embeddings model
-
-xAI currently does not offer any embeddings models.
-
-[Click here](../../model-roles/embeddings.mdx) to see a list of embeddings model providers.
-
-## Reranking model
-
-xAI currently does not offer any reranking models.
-
-[Click here](../../model-roles/reranking.mdx) to see a list of reranking model providers.
+<Info>
+  **Check out a more advanced configuration [here](https://hub.continue.dev/xai/grok-4?view=config)**
+</Info>
