fix broken links

--- a/docs/customize/deep-dives/autocomplete.mdx
+++ b/docs/customize/deep-dives/autocomplete.mdx
@@ -127,7 +127,7 @@ Explore autocomplete model configurations on [the hub](https://hub.continue.dev/
 ### Customize Autocomplete User Settings in the Continue Extension
 
 {/* - `Use autocomplete cache`: If on, caches completions */}
-The following settings can be configured for autocompletion in the IDE extension [User Settings Page](../settings.md):
+The following settings can be configured for autocompletion in the IDE extension User Settings Page:
 
 - `Multiline Autocompletions`: Controls multiline completions for autocomplete. Can be set to `always`, `never`, or `auto`. Defaults to `auto`
 - `Disable autocomplete in files`: List of comma-separated glob pattern to disable autocomplete in matching files. E.g., "\_/.md, \*/.txt"
