--- a/docs/guides/codebase-documentation-awareness.mdx
+++ b/docs/guides/codebase-documentation-awareness.mdx
@@ -42,7 +42,7 @@ This is a React application with:
     Place rules files at different levels of your project hierarchy to scope when they trigger
 </Tip>
 
-Learn more about [rules configuration](/reference/config/continuerules).
+Learn more about [rules configuration](/customize/deep-dives/rules).
 
 ## Make your agent aware of other codebases
 
@@ -83,7 +83,7 @@ You can use the `gh` CLI to:
 
 #### DeepWiki MCP
 
-[DeepWiki MCP](hub.continue.dev/deepwiki/deepwiki-mcp) lets your agent explore any public GitHub repository.
+[DeepWiki MCP](https://hub.continue.dev/deepwiki/deepwiki-mcp) lets your agent explore any public GitHub repository.
 ```
 
 Once configured, your agent can explore repositories like:
@@ -178,6 +178,6 @@ The new approach provides better integration with Continue's Agent features and 
 
 ## Next steps
 
-- Learn more about [MCP servers](/reference/mcp)
-- Explore [rules configuration](/reference/config/continuerules)
+- Learn more about [MCP servers](/reference/continue-mcp)
+- Explore [rules configuration](/customize/deep-dives/rules)
 - Set up [custom assistants](/guides/understanding-assistants) with specific knowledge domains
