--- a/docs/reference/deprecated-codebase.mdx
+++ b/docs/reference/deprecated-codebase.mdx
@@ -26,7 +26,7 @@ Continue indexes your codebase so that it can later automatically pull in the mo
 <Info>
   **Note:** `transformers.js` cannot be used in JetBrains IDEs. However, you can
   select a different embeddings model from [the list
-  here](../model-roles/embeddings).
+  here](../customize/model-roles/embeddings).
 </Info>
 
 ## How to Use @Codebase and @Folder Context Providers
