--- a/docs/reference/deprecated-docs.mdx
+++ b/docs/reference/deprecated-docs.mdx
@@ -21,7 +21,7 @@ If you're currently using the `@Docs` context provider, please migrate to the ne
 
 **Below is the original documentation for the `@Docs` context provider, preserved for reference**
 
-The [`@Docs` context provider](../customize/custom-providers#docs) allows you to efficiently reference documentation directly within Continue.
+The `@Docs` context provider allows you to efficiently reference documentation directly within Continue.
 
 ## How to Enable the @Docs Context Provider
 
@@ -219,7 +219,7 @@ If your documentation is private, you can skip the default crawler and use a loc
   The default local crawler is a lightweight tool that cannot render sites that
   are dynamically generated using JavaScript. If your sites need to be rendered,
   you can enable the experimental `Use Chromium for Docs Crawling` feature from
-  your [User Settings Page](../settings) This will download and install Chromium
+  your User Settings Page. This will download and install Chromium
   to `~/.continue/.utils`, and use it as the local crawler. **Note:** Chromium
   crawling support is being deprecated and may be removed in future versions.
 </Info>
