--- a/docs/customize/deep-dives/slash-commands.mdx
+++ b/docs/customize/deep-dives/slash-commands.mdx
@@ -10,7 +10,7 @@ sidebarTitle: "Slash Commands"
 Slash commands are shortcuts that can be activated by typing '/' in a chat session (press <kbd>cmd/ctrl</kbd> + <kbd>L</kbd> (VS Code) or <kbd>cmd/ctrl</kbd> + <kbd>J</kbd> (JetBrains)), and selecting from the dropdown.
 ![slash-commands](/images/slash-commands.png)
 
-Slash commands can be combined with additional instructions, including [context providers](../custom-providers) or highlighted code.
+Slash commands can be combined with additional instructions, including highlighted code.
 
 <Note>
   **Recommended approach**: Use prompt files to create slash commands instead of
