remove outdated descriptions

--- a/docs/customize/model-providers/more/together.mdx
+++ b/docs/customize/model-providers/more/together.mdx
@@ -1,6 +1,5 @@
 ---
-title: "How to Configure Together AI with Continue"
-description: "Configure the Together AI cloud platform for running large language models with Continue, including setup instructions and sample configuration for Qwen2.5 Coder"
+title: "Together AI"
 sidebarTitle: "Together AI"
 ---
 
