reorder referene section

--- a/docs/reference/deprecated-context-providers.mdx
+++ b/docs/reference/deprecated-context-providers.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Deprecated Context Providers"
+title: "Context Providers (Deprecated)"
 description: "These context providers have been deprecated and are no longer actively maintained. They remain documented here for reference purposes only."
 noindex: true
 ---
