update block types

--- a/docs/hub/blocks/block-types.mdx
+++ b/docs/hub/blocks/block-types.mdx
@@ -1,7 +1,7 @@
 ---
-title: "Block Types in Continue Hub: Models, Context Providers, Prompts, and More"
+title: "Blocks: Models, Rules, Prompts, and MCP servers"
 sideBarTitle: "Block Types"
-description: "Explore the different types of reusable blocks in Continue Hub including models, context providers, documentation, MCP servers, rules, prompts, and data components"
+description: "Explore the different types of reusable blocks in Continue Hub including models, MCP servers, rules, and prompts"
 ---
 
 ## Models
